# CodeReviewAI

./: Dockerfile  README.md  docker-compose.yaml  pyproject.toml
app/: main.py
app/models/: request_models.py
app/services/: github_service.py  openai_service.py
